...
      selectedItemColor: theme.primaryColor,
      unselectedItemColor: theme.textTheme.bodyMedium?.color?.withAlpha(153), // Using withAlpha instead of withOpacity
      items: [
        const BottomNavigationBarItem(
          icon: Icon(Icons.home_outlined),
          activeIcon: Icon(Icons.home),
          label: 'Home',
        ),
        const BottomNavigationBarItem(
          icon: Icon(Icons.category_outlined),
          activeIcon: Icon(Icons.category),
          label: 'Categories',
        ),
...
